# ros_handout

./: .gitignore  humble_ros_install.sh
ROS_UI/src/my_ui/: CMakeLists.txt  package.xml
ROS_UI/src/my_ui/src/: main.cpp  main_window.cpp  main_window.hpp  my_ui.ui  ros_page.cpp
ROS_UI/src/python_pub_sub/: package.xml  setup.py
ROS_UI/src/python_pub_sub/python_ui/: ros_ui.py  ros_ui_thread.py
basic_ros/src/c++_pub_sub/: CMakeLists.txt  package.xml
basic_ros/src/c++_pub_sub/src/: sub.cpp
basic_ros/src/c++_service/: CMakeLists.txt  package.xml
basic_ros/src/c++_service/src/: client.cpp
basic_ros/src/launch_ex/: CMakeLists.txt  package.xml
basic_ros/src/launch_ex/launch/: test.launch.py
basic_ros/src/python_pub_sub/: package.xml  setup.py
basic_ros/src/python_service/: package.xml  setup.py
basic_ros/src/python_service/python_service/: client.py
basic_ros/src/self_def_c++/: CMakeLists.txt  package.xml
basic_ros/src/self_def_c++/src/: action_client.cpp  action_client.py  action_server.cpp  action_server.py  client.cpp  pub.cpp  service.cpp  sub.cpp
basic_ros/src/self_def_msg_srv/: CMakeLists.txt  package.xml
basic_ros/src/self_def_msg_srv/action/: MyAction.action
basic_ros/src/self_def_msg_srv/msg/: ErrorCode.msg
basic_ros/src/self_def_msg_srv/srv/: AddMany.srv
ros_shell/: it_shield.h  ros_led_listener.py  ros_led_pub.py  test.py
turtlebot_test/src/c++_pub_sub/: CMakeLists.txt  get_points.py  package.xml
turtlebot_test/src/c++_pub_sub/src/: sub.cpp
turtlebot_test/src/my_ui/: CMakeLists.txt  package.xml
turtlebot_test/src/my_ui/src/: main_window.hpp  ros_page.cpp
turtlebot_test/src/python_pub_sub/: setup.cfg
turtlebot_test/src/python_pub_sub/python_ui/: my_ui.py  ros_ui.py  simple_ui.py
turtlebot_test/src/turtle_bot/: CMakeLists.txt  package.xml
turtlebot_test/src/turtle_bot/src/: main_window.cpp  main_window.hpp  my_ui.ui  ros_page.cpp
